Update IDEA vmoptions