@@ -1,6 +1,5 @@
--server
 -ea
--noverify
+-Xverify:none
 -Xms512m
 -Xmx4096m
 -Xbootclasspath/a:../lib/boot.jar
@@ -9,13 +8,11 @@
 -XX:InitialCodeCacheSize=192m
 -XX:ReservedCodeCacheSize=384m
 -XX:+UseG1GC
--XX:G1ReservePercent=8
--XX:InitiatingHeapOccupancyPercent=25
--XX:MaxGCPauseMillis=120
+-XX:MaxGCPauseMillis=125
+-XX:InitiatingHeapOccupancyPercent=33
 -XX:SoftRefLRUPolicyMSPerMB=50
 -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
 -XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
--XX:+AggressiveOpts
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
 -XX:+ScavengeBeforeFullGC
